fix: center rest text by using spans instead of letter-spacing

--- a/css/rest.css
+++ b/css/rest.css
@@ -9,7 +9,9 @@ body {
 .rest-text {
   font-size: 6rem;
   font-weight: bold;
-  letter-spacing: 0.8em;
   text-align: center;
   margin-top: 30vh;
+}
+.rest-text span + span {
+  margin-left: 1em;
 }
